--- a/mylibrary.html
+++ b/mylibrary.html
@@ -12,7 +12,7 @@
                 <ul style="list-style: none">
                     <li><h3>Ektor Nikolinakos</h3></li>
                     <li>
-                        <a href="aboutme.html">About</a>
+                        <a href="index.html">About</a>
                     </li>
                     <li>
                         <a href="https://github.com/ektor1" target="_blank">GitHub</a>
